# docs/swagger.json
@@ -11,9 +11,136 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/v1/fitnessstudio/classes": {
+        "/v1/fitnessstudio/bookings/classes/{classId}/users": {
             "get": {
                 "description": "Returns a list of classes optionally filtered by various parameters. If no filters as pass returns all classes.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bookings"
+                ],
+                "summary": "Get classes booked by user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Class Id",
+                        "name": "classId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/api.UsersBooked"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/fitnessstudio/bookings/reserve": {
+            "post": {
+                "description": "Make class reservation",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bookings"
+                ],
+                "parameters": [
+                    {
+                        "description": "Reservation body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.MakeRegervation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/fitnessstudio/bookings/users/{userId}/classes": {
+            "get": {
+                "description": "Returns a list of classes optionally filtered by various parameters. If no filters as pass returns all classes.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bookings"
+                ],
+                "summary": "Get classes booked by user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/api.ClassBooked"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/fitnessstudio/classes": {
+            "get": {
+                "description": "Returns a list of classes, optionally filtered by various parameters. If no filters are passed, it returns all classes.",
                 "produces": [
                     "application/json"
                 ],
@@ -90,7 +217,7 @@
                 }
             },
             "post": {
-                "description": "Adds a new class with the provided details.",
+                "description": "Adds new classes with the provided details.",
                 "consumes": [
                     "application/json"
                 ],
@@ -100,7 +227,7 @@
                 "tags": [
                     "Classes"
                 ],
-                "summary": "Add a new class",
+                "summary": "Create multiple classes.",
                 "parameters": [
                     {
                         "description": "Class details (all fields are required)",
@@ -114,21 +241,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Class added successfully",
+                        "description": "message\": \"All Classes Created With Success\", \"Not Possible To Scheduler\": array\u003capi.Class\u003e}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Invalid request body or missing required fields",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     }
                 }
@@ -146,8 +273,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "class ID",
-                        "name": "classId",
+                        "description": "Class ID",
+                        "name": "class-id",
                         "in": "path",
                         "required": true
                     }
@@ -162,7 +289,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.Error"
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
@@ -174,7 +307,7 @@
                 }
             },
             "post": {
-                "description": "Update a Class",
+                "description": "Update class.",
                 "produces": [
                     "application/json"
                 ],
@@ -185,7 +318,7 @@
                     {
                         "type": "integer",
                         "description": "Class ID",
-                        "name": "classId",
+                        "name": "class-id",
                         "in": "path",
                         "required": true
                     },
@@ -205,6 +338,18 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
                         "schema": {
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
@@ -266,12 +411,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CreateUser"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
@@ -314,6 +462,12 @@
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -334,7 +488,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "userId",
+                        "name": "user-id",
                         "in": "path",
                         "required": true
                     },
@@ -358,6 +512,12 @@
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -372,18 +532,26 @@
         "CreateUser": {
             "description": "CreateUser",
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
         "Update": {
             "description": "UpdateUser Information",
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
@@ -399,8 +567,30 @@
                 }
             }
         },
+        "api.ClassBooked": {
+            "type": "object",
+            "properties": {
+                "class_date": {
+                    "type": "string"
+                },
+                "class_id": {
+                    "type": "integer"
+                },
+                "class_name": {
+                    "type": "string"
+                },
+                "reserved_date": {
+                    "type": "string"
+                }
+            }
+        },
         "api.ClassScheduler": {
             "type": "object",
+            "required": [
+                "end_date",
+                "name",
+                "start_date"
+            ],
             "properties": {
                 "capacity": {
                     "type": "integer"
@@ -409,10 +599,22 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50
                 },
                 "start_date": {
                     "type": "string"
+                }
+            }
+        },
+        "api.MakeRegervation": {
+            "type": "object",
+            "properties": {
+                "class_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -446,6 +648,21 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string",
+                    "maxLength": 50
+                }
+            }
+        },
+        "api.UsersBooked": {
+            "type": "object",
+            "properties": {
+                "class_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -478,14 +695,6 @@
                             "type": "string"
                         }
                     }
-                }
-            }
-        },
-        "utils.Error": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
                 }
             }
         }
