# handlers/usersHandler.go
@@ -2,12 +2,12 @@ package handlers
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
 	"strconv"
 
 	api "github.com/Flgado/fitnessStudioApp/internal/api/models"
 	"github.com/Flgado/fitnessStudioApp/internal/usecases"
+	"github.com/Flgado/fitnessStudioApp/utils"
 	"github.com/go-chi/chi"
 )
 
@@ -45,6 +45,7 @@ func (h UsersHandler) HandlerGetUsers(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param user-id path int true "User ID"
 // @Success 200 {object} User
+// @Failure 404 {object} ErrorResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {string} string "Internal Server Error"
 // @Router /v1/fitnessstudio/users/{user-id} [get]
@@ -54,7 +55,13 @@ func (h UsersHandler) HandlerGetUserById(w http.ResponseWriter, r *http.Request)
 	// Convert the userId string to an integer
 	userId, err := strconv.Atoi(userIdStr)
 	if err != nil {
-		responseWithErrors(w, *r, err)
+		e := utils.E(http.StatusBadRequest,
+			err,
+			map[string]string{"message": "BadRequest"},
+			"Request body not expected",
+			"Read our documentation for more details")
+
+		responseWithErrors(w, *r, e)
 		return
 	}
 
@@ -72,47 +79,71 @@ func (h UsersHandler) HandlerGetUserById(w http.ResponseWriter, r *http.Request)
 // @Tags Users
 // @Produce json
 // @Param request body api.CreateUser true "User data to create"
-// @Success 200
-// @Failure 400 {string} ErrorResponse
+// @Success 200  {object} api.CreateUser
+// @Failure 400 {object} ErrorResponse
 // @Failure 500 {string} string "Internal Server Error"
 // @Router /v1/fitnessstudio/users [post]
 func (h UsersHandler) HandlerCreateUser(w http.ResponseWriter, r *http.Request) {
 	var user api.CreateUser
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
-		responseWithError(w, http.StatusBadRequest, "Invalid request")
+		e := utils.E(http.StatusBadRequest,
+			err,
+			map[string]string{"message": "BadRequest"},
+			"Request body not expected",
+			"Read our documentation for more details")
+
+		responseWithErrors(w, *r, e)
+		return
 	}
 
 	err = h.uc.CreateUser(r.Context(), user.Name)
 
 	if err != nil {
-		responseWithError(w, http.StatusInternalServerError, err.Error())
+		responseWithErrors(w, *r, err)
+		return
 	}
+
+	respondWithJson(w, 200, map[string]string{"message": "User created with Success"})
 }
 
 // HandlerUpdateUser handles the HTTP request to update a user.
 // @Description Update a user
 // @Tags Users
 // @Produce json
-// @Param userId path int true "User ID"
+// @Param user-id path int true "User ID"
 // @Param request body api.UpdateUser true "User data to update"
 // @Success 200
+// @Failure 404 {object} ErrorResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {string} string "Internal Server Error"
 // @Router /v1/fitnessstudio/users/{user-id} [post]
 func (h UsersHandler) HandlerUpdateUser(w http.ResponseWriter, r *http.Request) {
-	userIdStr := chi.URLParam(r, "userId")
+	userIdStr := chi.URLParam(r, "user-id")
 	// Convert the userId string to an integer
 	userId, err := strconv.Atoi(userIdStr)
 	if err != nil {
-		responseWithError(w, http.StatusBadRequest, "Invalid userId")
+		e := utils.E(http.StatusBadRequest,
+			err,
+			map[string]string{"message": "BadRequest"},
+			"User Id with wrong format",
+			"Read our documentation for more details")
+
+		responseWithErrors(w, *r, e)
 		return
 	}
 
 	var updateUser api.UpdateUser
 	err = json.NewDecoder(r.Body).Decode(&updateUser)
 	if err != nil {
-		responseWithError(w, http.StatusBadRequest, "Invalid request")
+		e := utils.E(http.StatusBadRequest,
+			err,
+			map[string]string{"message": "BadRequest"},
+			"Request body not expected",
+			"Read our documentation for more details")
+
+		responseWithErrors(w, *r, e)
+		return
 	}
 
 	user := api.User{
@@ -120,11 +151,11 @@ func (h UsersHandler) HandlerUpdateUser(w http.ResponseWriter, r *http.Request) 
 		Name: updateUser.Name,
 	}
 
-	u, err := h.uc.UpdateUser(r.Context(), user)
+	_, err = h.uc.UpdateUser(r.Context(), user)
 	if err != nil {
-		// TODO: Deal for example with no user exist !!
-		responseWithError(w, http.StatusInternalServerError, "Invalid request")
+		responseWithErrors(w, *r, err)
+		return
 	}
 
-	responseWithError(w, http.StatusOK, fmt.Sprintf("Updated user %v", u))
+	respondWithJson(w, http.StatusOK, map[string]string{"Success": "Updated user"})
 }
