# internal/api/models/classes.go
@@ -3,9 +3,9 @@ package api
 import "time"
 
 type ClassScheduler struct {
-	Name      string    `json:"name"`
-	StartDate time.Time `json:"start_date"`
-	EndDate   time.Time `json:"end_date"`
+	Name      string    `json:"name" validate:"required,len=1,max=50"`
+	StartDate time.Time `json:"start_date" validate:"required"`
+	EndDate   time.Time `json:"end_date" validate:"required,gtefield=StartDate"`
 	Capacity  int       `json:"capacity"`
 }
 
@@ -22,7 +22,7 @@ type Class struct {
 }
 
 type UpdateClass struct {
-	Name     *string    `json:"name"`
+	Name     *string    `json:"name" validate:"len=1,max=50"`
 	Date     *time.Time `json:"date"`
 	Capacity *int       `json:"capacity"`
 }
